<resources>


    <!--Chua kiem duyet-->
    <string name="register">Student Register</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="close">Close</string>

    <string name="student_login">Student Login</string>
    <string name="open">Open</string>

    <string name="login">Login</string>
    <string name="are_you_an_admin_login_here">Are you an admin? Login here</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="take_photo">&#160;Take Photo</string>
    <string name="choose_photo">&#160;Choose Photo</string>

    <string name="button_register">Register</string>
    <string name="student_forgot_password">Student Forgot Password</string>
    <string name="reset_password">Reset password</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_app_name">SIMS App</string>
    <string name="app_name">Student Information\nManagement System</string>
    <string name="copyright">© Vu Xuan Canh IKBO–07–19 Project SIMS</string>
    <string name="logout">Logout</string>
    <string name="my_profile">My Profile</string>
    <string name="time_table">Time Table</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="learning_results">Learning Results</string>
    <string name="chat">Schedule</string>
    <string name="welcome">Welcome back</string>
    <string name="title_dialog_logout">Logging out</string>
    <string name="message_are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="sign_up">Sign Up</string>
    <string name="student_id">ID</string>
    <string name="home">Home</string>
    <string name="full_name">Full name</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="student_class">Class</string>
    <string name="gender">Gender</string>
    <string name="gender_space">&#160;&#160;&#160;&#160;Gender</string>
    <string name="phone_number">Phone number</string>
    <string name="gmail">Gmail</string>
    <string name="back">Back</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="exit">Exit</string>
    <string name="change_password">Change Password</string>
    <string name="ok">OK</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="save">Save</string>
    <string name="delete_avatar">Delete Avatar</string>
    <string name="choose_your_class">Choose your class</string>
    <string name="name">Name</string>
    <string name="math">Math</string>
    <string name="physical">Physical</string>
    <string name="programming">Programming</string>
    <string name="informatics">Informatic</string>
    <string name="economics">Economics</string>
    <string name="philosophy">Philosophy</string>
    <string name="english">English</string>
    <string name="admin_login">Admin Login</string>
    <string name="are_you_student_login_here">Are you student? Login here</string>
    <string name="list_student">List Student</string>
    <string name="add_student">Add Student</string>
    <string name="a_z_soft_by_name">A-Z Soft by name</string>
    <string name="student_profile">Student Profile</string>
    <string name="select_result">Select result</string>
    <string name="student">Student</string>
    <string name="online_mirea">Online Mirea</string>

</resources>