<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="MissingClass">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:src="@drawable/login_hero_image"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:contentDescription="@string/app_name" />

    <TextView
        style="@style/viewParent"
        android:layout_marginTop="10dp"
        android:text="@string/register"
        android:textSize="@dimen/headerTextSize"
        android:textColor="@color/blackTextColor"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        >


        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_stu_register_avt"
            android:layout_width="120dp"
            android:layout_height="120dp"

            android:src="@drawable/graduated" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_stu_register_take_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:icon="@drawable/ic_baseline_photo_camera_24"
                android:text="@string/take_photo"
                android:fontFamily="@font/my_font"
                android:textStyle="bold"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon" />

            <Button
                android:id="@+id/btn_stu_register_choose_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/my_font"
                android:textStyle="bold"
                app:icon="@drawable/ic_baseline_insert_photo_24"
                android:text="@string/choose_photo"
                style="@style/Widget.Material3.Button.OutlinedButton.Icon"/>
        </LinearLayout>
    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/parent"
        app:startIconDrawable="@drawable/ic_baseline_person_pin_24"
        android:layout_marginTop="@dimen/signup_text_margin_top">

        <EditText
            android:id="@+id/edt_stu_register_name"
            style="@style/modifiedEditText"
            android:drawableTint="?attr/colorControlNormal"
            android:fontFamily="@font/my_font"
            android:hint="@string/full_name"
            android:inputType="text"
            android:autofillHints="name"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        style="@style/parent"
        app:startIconDrawable="@drawable/round_mail_outline_24"
        android:layout_marginTop="@dimen/signup_text_margin_top">

        <EditText
            android:id="@+id/edt_stu_register_email"
            style="@style/modifiedEditText"

            android:hint="@string/login_email_hint"
            android:inputType="textEmailAddress"
            android:fontFamily="@font/my_font"
            android:maxLines="1"
            android:autofillHints="emailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/parent"
        android:layout_marginTop="@dimen/signup_text_margin_top"
        app:startIconDrawable="@drawable/round_lock_24"
        app:endIconMode="password_toggle">

        <EditText
            android:id="@+id/edt_stu_register_password"
            style="@style/modifiedEditText"
            android:hint="@string/login_password_hint"
            android:fontFamily="@font/my_font"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>



    <include
        android:id="@+id/viewProgressButton"
        layout="@layout/progress_button_layout"
        android:layout_marginTop="40dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_stu_register_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/blackTextColor"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/my_font"
        android:text="@string/signup_login_hint"/>

</LinearLayout>