<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="MissingClass">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:src="@drawable/login_hero_image"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:contentDescription="@string/app_name" />

    <TextView
        style="@style/viewParent"
        android:layout_marginTop="10dp"
        android:text="@string/student_forgot_password"
        android:fontFamily="@font/my_font"
        android:textSize="@dimen/headerTextSize"
        android:textColor="@color/blackTextColor"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        style="@style/parent"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_stu_forgot_pass_email"
            style="@style/modifiedEditText"
            android:drawableTint="?attr/colorControlNormal"
            android:drawableStart="@drawable/ic_baseline_mail_outline_24"
            android:hint="@string/login_email_hint"
            android:fontFamily="@font/my_font"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>




    <include
        android:id="@+id/viewProgressButton"
        layout="@layout/progress_button_layout"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_stu_forgot_pass_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/blackTextColor"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/my_font"
        android:text="@string/signup_login_hint"/>

</LinearLayout>