<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp"
    android:focusableInTouchMode="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:ignore="MissingClass">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:src="@drawable/login_hero_image"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:contentDescription="@string/app_name" />

    <TextView
        style="@style/viewParent"
        android:layout_marginTop="10dp"
        android:text="@string/admin_login"
        android:fontFamily="@font/my_font"
        android:textSize="@dimen/headerTextSize"
        android:textColor="@color/blackTextColor"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        style="@style/parent"
        app:startIconDrawable="@drawable/ic_baseline_mail_outline_24"
        android:layout_marginTop="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_ad_login_email"
            style="@style/modifiedEditText"
            android:drawableTint="?attr/colorControlNormal"

            android:hint="@string/login_email_hint"
            android:fontFamily="@font/my_font"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputPassword"
        style="@style/parent"
        app:startIconDrawable="@drawable/ic_outline_lock_24"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_ad_login_password"
            style="@style/modifiedEditText"
            android:drawableTint="?attr/colorControlNormal"
            android:hint="@string/login_password_hint"
            android:fontFamily="@font/my_font"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_ad_login_remember_me"
            style="@style/viewParent"
            android:layout_gravity="start"
            android:fontFamily="@font/my_font"
            android:text="@string/remember_me"
            android:textColor="@color/blackTextColor"
            android:textSize="15sp" />

<!--        <TextView-->
<!--            android:id="@+id/tv_stu_login_forgot_password"-->
<!--            style="@style/viewParent"-->
<!--            android:layout_alignParentTop="true"-->
<!--            android:layout_alignParentEnd="true"-->
<!--            android:layout_gravity="end"-->
<!--            android:layout_marginStart="150dp"-->
<!--            android:layout_marginTop="14dp"-->
<!--            android:layout_marginEnd="2dp"-->
<!--            android:fontFamily="@font/my_font"-->
<!--            android:text="@string/forgot_password"-->
<!--            android:textColor="@color/blackTextColor"-->
<!--            android:textSize="15sp" />-->
    </RelativeLayout>


    <!--    <ImageView-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="30dp"-->
    <!--        android:src="@drawable/ic_login_button"-->
    <!--        android:layout_gravity="right"-->
    <!--        tools:ignore="RtlHardcoded"-->
    <!--        android:contentDescription="@string/login" />-->

    <include
        android:id="@+id/viewProgressButton"
        layout="@layout/progress_button_layout"
        android:layout_marginTop="40dp"

        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_ad_login_to_login_stu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/blackTextColor"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/my_font"
        android:text="@string/are_you_student_login_here"/>


</LinearLayout>